changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,16 @@
 
 # recording / media content (repo stays without interview data or built assets)
 /public
-/json
 weaviate-data.tar.gz
 
-# local backup (from scripts/backup-for-repo-recreate.sh)
-ts-portal-gmu-backup-*
+# json: ignore project interview data and generated counts; keep templates and schemas for PRs/forks
+/json/entity-recording-counts.json
+!/json/interviews/example-collection/
+
+# local/deploy scripts and docs (not for upstream PR)
+setup-nginx-ssl.sh
+backup-for-repo-recreate.sh
+RESTORE_AFTER_REFORK.md
 
 # misc
 .DS_Store
